--- a/html/index.html
+++ b/html/index.html
@@ -46,9 +46,17 @@
     </header>
     <main></main>
     <footer>
-      <div class="subscribe"></div>
+      <div>
+        <img class="subscribe-img" src="../images/subscribe.jpg" alt="" />
+        <p class="subscribe">
+          Subscribe to our newsletter and get a free consultation.
+        </p>
+        <label>
+          <input name="email" id="email" placeholder="Email" />
+        </label>
+        <button class="subscribe-button">Subscribe</button>
+      </div>
       <div class="links"></div>
     </footer>
-    <script src="js/index.js"></script>
   </body>
 </html>
