--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Design bla bla" />
     <title>Design | Home</title>
     <link href="../css/global.css" rel="stylesheet" />
-    <link href="../css/index.css" rel="stylesheet" />
+    <link href="../css/contact.css" rel="stylesheet" />
     <link href="../css/media.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -44,7 +44,63 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div>
+        <div class="top-img"></div>
+        <p class="contact-text">Contact</p>
+      </div>
+      <div>
+        <p class="contact-info">
+          Contact us at yourdesign@fake.com or fill in the form below. We will
+          contact you within 24 hours.
+        </p>
+      </div>
+      <form id="contactForm">
+        <div>
+          <label>
+            <p>*Full Name</p>
+            <input name="fullName" id="fullName" placeholder="Julia Smith" />
+          </label>
+          <div class="form-error" id="fullNameError">
+            Please enter your full name (5 characters or more)
+          </div>
+        </div>
+        <div>
+          <label>
+            <p>*Email</p>
+            <input
+              name="email"
+              id="email-contact"
+              placeholder="julia.smith@unknown.com"
+            />
+          </label>
+          <div class="form-error" id="emailError">
+            Please enter a valid email address
+          </div>
+        </div>
+        <div>
+          <label class="subject">
+            <p>*subject</p>
+            <p>(minimum 15 characters)</p>
+            <input name="subject" id="subject" placeholder="Subject" />
+          </label>
+          <div class="form-error" id="subjectError">
+            The subject must be at least 15 characters
+          </div>
+        </div>
+        <div>
+          <label class="message">
+            <p>*Message</p>
+            <p>(minimum 25 characters)</p>
+            <input name="message" id="message" placeholder="Your message!" />
+          </label>
+          <div class="form-error" id="messageError">
+            The message must be at least 25 characters
+          </div>
+        </div>
+        <button>Submit</button>
+      </form>
+    </main>
     <footer>
       <div>
         <img class="subscribe-img" src="../images/subscribe.jpg" alt="" />
@@ -60,7 +116,7 @@
               </p>
             </label>
           </div>
-          <button>Subscribe</button>
+          <button class="button-subscribe">Subscribe</button>
         </form>
       </div>
       <div class="links">
