--- a/html/index.html
+++ b/html/index.html
@@ -80,5 +80,6 @@
       <p class="copyright">Copyright &copy; 2023</p>
     </footer>
     <script src="../js/global.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
