--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
     <footer>
       <div>
-        <img class="subscribe-img" src="../images/subscribe.jpg" alt="" />
+        <img class="subscribe-img" src="images/subscribe.jpg" alt="" />
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
