--- a/posts.html
+++ b/posts.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Design bla bla" />
     <title>Design | Home</title>
-    <link href="../css/global.css" rel="stylesheet" />
-    <link href="../css/posts.css" rel="stylesheet" />
-    <link href="../css/media.css" rel="stylesheet" />
+    <link href="css/global.css" rel="stylesheet" />
+    <link href="css/posts.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -80,7 +80,7 @@
       </div>
       <p class="copyright">Copyright &copy; 2023</p>
     </footer>
-    <script src="../js/posts.js"></script>
-    <script src="../js/global.js"></script>
+    <script src="js/posts.js"></script>
+    <script src="js/global.js"></script>
   </body>
 </html>
