--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Design bla bla" />
     <title>Design | Home</title>
     <link href="css/global.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet" />
+    <link href="css/about.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -40,7 +40,72 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div>
+        <div class="top-img-about"></div>
+        <p class="about-text">“A design customized for you and your needs”</p>
+      </div>
+      <p class="top-text-about">Our Work</p>
+      <section class="our-work-flex">
+        <div class="our-work-text">
+          <p>
+            Lorem ipsum dolor sit amet. Aut dolores praesentium et tempora
+            aspernatur rem animi suscipit quo iure similique hic porro
+            consequatur. Qui enim fugit et provident voluptas quo earum atque et
+            explicabo pariatur 33 nemo voluptas eum sint rerum in optio amet.
+            Sit molestiae libero qui fugit enim ea quia velit. In dolorem
+            incidunt aut numquam consequatur rem assumenda dolores id ullam
+            velit est ducimus aspernatur.
+          </p>
+          <p>
+            Qui enim fugit et provident voluptas quo earum atque et explicabo
+            pariatur 33 nemo voluptas eum sint rerum in optio amet. Sit
+            molestiae libero qui fugit enim ea quia velit. In dolorem incidunt
+            aut numquam consequatur rem assumenda dolores id ullam velit est
+            ducimus aspernatur. Id molestiae rerum sed cumque eius non sint
+            numquam. Aut ducimus nostrum ut iusto rerum ea incidunt eaque! Vel
+            dolores dolores ut rerum debitis qui numquam tempore et nihil
+            sapiente ex commodi facere.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet. Aut dolores praesentium et tempora
+            aspernatur rem animi suscipit quo iure similique hic porro
+            consequatur. Qui enim fugit et provident voluptas quo earum atque et
+            explicabo pariatur 33 nemo voluptas eum sint rerum in optio amet.
+          </p>
+        </div>
+        <div>
+          <img
+            class="our-work-img"
+            src="images/about-img.jpg"
+            alt="about image"
+          />
+        </div>
+      </section>
+      <section class="team-flex">
+        <div class="our-team-img">
+          <img src="images/olivia.jpg" alt="olivia" />
+          <div class="team-name">
+            <p class="name-color">Olivia Harris</p>
+            <p>CEO and Interior designer</p>
+          </div>
+        </div>
+        <div class="our-team-img">
+          <img src="images/liam.jpg" alt="Liam" />
+          <div class="team-name">
+            <p class="name-color">Liam Smith</p>
+            <p>Photographer and Designer</p>
+          </div>
+        </div>
+        <div class="our-team-img">
+          <img src="images/sophia.jpg" alt="olivia" />
+          <div class="team-name">
+            <p class="name-color">Sophia Lauren</p>
+            <p>Advertising & Promotions manager</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
       <div>
         <img class="subscribe-img" src="images/subscribe.jpg" alt="" />
@@ -56,7 +121,7 @@
               </p>
             </label>
           </div>
-          <button>Subscribe</button>
+          <button class="button-subscribe">Subscribe</button>
         </form>
       </div>
       <div class="links">
