--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
     <main>
       <section class="top-section">
         <div class="top-img"></div>
-        <p class="slogan">A new start with all the knowlege you need!</p>
+        <p class="slogan-index">A new start with all the knowlege you need!</p>
         <a href="postdetalj.html" class="tip-button">Tip of the week</a>
       </section>
       <section>
-        <p class="latest-posts">Latest posts</p>
+        <div>
+          <p class="latest-posts">Latest posts</p>
+        </div>
       </section>
     </main>
     <footer>
