--- a/contact.html
+++ b/contact.html
@@ -51,69 +51,78 @@
           contact you within 24 hours.
         </p>
       </div>
-      <form id="contactForm">
-        <div>
-          <label>
-            <p>*Full Name</p>
-            <input name="fullName" id="fullName" placeholder="Julia Smith" />
-          </label>
-          <div class="form-error" id="fullNameError">
-            Please enter your full name (5 characters or more)
-          </div>
-        </div>
-        <div>
-          <label>
-            <p>*Email</p>
-            <input
-              name="email"
-              id="email-contact"
-              placeholder="julia.smith@unknown.com"
-            />
-          </label>
-          <div class="form-error" id="emailError">
-            Please enter a valid email address
-          </div>
-        </div>
-        <div>
-          <label class="subject">
-            <p>*subject</p>
-            <p>(minimum 15 characters)</p>
-            <input name="subject" id="subject" placeholder="Subject" />
-          </label>
-          <div class="form-error" id="subjectError">
-            The subject must be at least 15 characters
-          </div>
-        </div>
-        <div>
-          <label class="message">
-            <p>*Message</p>
-            <p>(minimum 25 characters)</p>
-            <input name="message" id="message" placeholder="Your message!" />
-          </label>
-          <div class="form-error" id="messageError">
-            The message must be at least 25 characters
-          </div>
-        </div>
-        <button>Submit</button>
-      </form>
-    </main>
-    <footer>
-      <div>
-        <img class="subscribe-img" src="images/subscribe.jpg" alt="" />
-        <p class="subscribe">
-          Subscribe to our newsletter and get a free consultation.
-        </p>
-        <form class="subscribeForm">
+      <section class="contact-and-picture">
+        <form id="contactForm">
           <div>
-            <label class="label-subscribe">
-              <input name="email" id="email" placeholder="Email" />
-              <p class="form-error" id="emailError">
-                Please enter a valid email address
-              </p>
+            <label>
+              <p>*Full Name</p>
+              <input
+                class="input-contact"
+                name="fullName"
+                id="fullName"
+                placeholder="Julia Smith"
+              />
             </label>
+            <div class="form-error" id="fullNameError">
+              Please enter your full name (5 characters or more)
+            </div>
           </div>
-          <button class="button-subscribe">Subscribe</button>
+          <div>
+            <label>
+              <p>*Email</p>
+              <input
+                class="input-contact"
+                name="email"
+                id="email-contact"
+                placeholder="julia.smith@unknown.com"
+              />
+            </label>
+            <div class="form-error" id="emailError">
+              Please enter a valid email address
+            </div>
+          </div>
+          <div>
+            <label class="subject">
+              <p>*subject</p>
+              <p>(minimum 15 characters)</p>
+              <input
+                class="input-contact"
+                name="subject"
+                id="subject"
+                placeholder="Subject"
+              />
+            </label>
+            <div class="form-error" id="subjectError">
+              The subject must be at least 15 characters
+            </div>
+          </div>
+          <div>
+            <label class="message">
+              <p>*Message</p>
+              <p>(minimum 25 characters)</p>
+              <input
+                class="input-contact"
+                name="message"
+                id="message"
+                placeholder="Your message!"
+              />
+            </label>
+            <div class="form-error" id="messageError">
+              The message must be at least 25 characters
+            </div>
+          </div>
+          <button class="button-submit">Submit</button>
         </form>
+        <section class="contact-img-hand">
+          <img
+            class="img-hand"
+            src="images/contact-form.jpg"
+            alt="contact image"
+          />
+        </section>
+      </section>
+    </main>
+    <footer class="footer-contact">
       </div>
       <div class="links">
         <a href="about.html">About</a>
@@ -122,6 +131,6 @@
       </div>
       <p class="copyright">Copyright &copy; 2023</p>
     </footer>
-    <script src="js/global.js"></script>
+    <script src="js/contact.js"></script>
   </body>
 </html>
