--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <div>
           <p class="latest-posts">Latest posts</p>
         </div>
+        <section class="latest-posts-carousel"></section>
+        <button class="prev">&#10094;</button>
+        <button class="next">&#10095;</button>
       </section>
     </main>
     <footer>
@@ -78,5 +81,6 @@
       <p class="copyright">Copyright &copy; 2023</p>
     </footer>
     <script src="js/global.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
