--- a/about.html
+++ b/about.html
@@ -82,6 +82,7 @@
           />
         </div>
       </section>
+      <p class="top-text-team">The Team</p>
       <section class="team-flex">
         <div class="our-team-img">
           <img src="images/olivia.jpg" alt="olivia" />
@@ -105,8 +106,34 @@
           </div>
         </div>
       </section>
+      <section class="about-images">
+        <div>
+          <img src="images/about2.jpg" alt="olivia" />
+        </div>
+        <div>
+          <img src="images/about3.jpg" alt="olivia" />
+        </div>
+        <div>
+          <img src="images/about4.jpg" alt="olivia" />
+        </div>
+        <div>
+          <img src="images/about5.jpg" alt="olivia" />
+        </div>
+        <div>
+          <img src="images/about6.jpg" alt="olivia" />
+        </div>
+        <div>
+          <img src="images/about7.jpg" alt="olivia" />
+        </div>
+        <div>
+          <img src="images/about8.jpg" alt="olivia" />
+        </div>
+        <div>
+          <img src="images/about9.jpg" alt="olivia" />
+        </div>
+      </section>
     </main>
-    <footer>
+    <footer class="footer-about">
       <div>
         <img class="subscribe-img" src="images/subscribe.jpg" alt="" />
         <p class="subscribe">
