--- a/postdetalj.html
+++ b/postdetalj.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Design bla bla" />
     <title>Design | Home</title>
     <link href="css/global.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet" />
+    <link href="css/postdetalj.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -40,10 +40,12 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="postContainer"></section>
+    </main>
     <footer>
       <div>
-        <img class="subscribe-img" src="../images/subscribe.jpg" alt="" />
+        <img class="subscribe-img" src="images/subscribe.jpg" alt="" />
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
@@ -56,7 +58,7 @@
               </p>
             </label>
           </div>
-          <button>Subscribe</button>
+          <button class="button-subscribe">Subscribe</button>
         </form>
       </div>
       <div class="links">
@@ -67,5 +69,6 @@
       <p class="copyright">Copyright &copy; 2023</p>
     </footer>
     <script src="js/global.js"></script>
+    <script src="js/postdetalj.js"></script>
   </body>
 </html>
