--- a/posts.html
+++ b/posts.html
@@ -49,6 +49,7 @@
         </p>
       </section>
       <section class="posts-list"></section>
+      <button class="load">Load More</button>
     </main>
 
     <footer>
@@ -77,6 +78,7 @@
       <p class="copyright">Copyright &copy; 2023</p>
     </footer>
     <script src="js/posts.js"></script>
+    <script src="js/load-posts.js"></script>
     <script src="js/global.js"></script>
   </body>
 </html>
