--- a/about.html
+++ b/about.html
@@ -49,29 +49,27 @@
       <section class="our-work-flex">
         <div class="our-work-text">
           <p>
-            Lorem ipsum dolor sit amet. Aut dolores praesentium et tempora
-            aspernatur rem animi suscipit quo iure similique hic porro
-            consequatur. Qui enim fugit et provident voluptas quo earum atque et
-            explicabo pariatur 33 nemo voluptas eum sint rerum in optio amet.
-            Sit molestiae libero qui fugit enim ea quia velit. In dolorem
-            incidunt aut numquam consequatur rem assumenda dolores id ullam
-            velit est ducimus aspernatur.
+            Designers play a crucial role in shaping the world around us. From
+            the clothes we wear to the websites we visit, we are responsible for
+            creating the visual and functional elements that make up our daily
+            experiences. Our work involves a combination of artistry,
+            problem-solving, and technical expertise.
           </p>
           <p>
-            Qui enim fugit et provident voluptas quo earum atque et explicabo
-            pariatur 33 nemo voluptas eum sint rerum in optio amet. Sit
-            molestiae libero qui fugit enim ea quia velit. In dolorem incidunt
-            aut numquam consequatur rem assumenda dolores id ullam velit est
-            ducimus aspernatur. Id molestiae rerum sed cumque eius non sint
-            numquam. Aut ducimus nostrum ut iusto rerum ea incidunt eaque! Vel
-            dolores dolores ut rerum debitis qui numquam tempore et nihil
-            sapiente ex commodi facere.
+            We use our creativity to develop original concepts and our technical
+            skills to turn those ideas into tangible products or digital
+            experiences. We also have a responsibility to consider the impact of
+            our work on society. We must consider factors such as accessibility,
+            sustainability, and cultural sensitivity when creating our designs.
           </p>
           <p>
-            Lorem ipsum dolor sit amet. Aut dolores praesentium et tempora
-            aspernatur rem animi suscipit quo iure similique hic porro
-            consequatur. Qui enim fugit et provident voluptas quo earum atque et
-            explicabo pariatur 33 nemo voluptas eum sint rerum in optio amet.
+            We are often called upon to collaborate with other professionals,
+            such as engineers, marketers, and content creators, to ensure that
+            our designs meet the needs of their intended audience. Overall, our
+            work is incredibly diverse and multidisciplinary. It requires a
+            unique blend of creativity, technical skills, and empathy to create
+            designs that are both functional and beautiful, while also
+            addressing complex societal issues.
           </p>
         </div>
         <div>
