--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section class="top-section">
         <div class="top-img"></div>
         <p class="slogan-index">A new start with all the knowlege you need!</p>
-        <a href="postdetalj.html" class="tip-button">Tip of the week</a>
+        <a href="tip.html" class="tip-button">Tip of the week</a>
       </section>
       <section>
         <div>
