--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Design bla bla" />
+    <meta
+      name="description"
+      content="Get help with the design you want. that fits your needs and dreams."
+    />
     <title>Design | Home</title>
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
@@ -22,6 +25,21 @@
       src="https://kit.fontawesome.com/681646004f.js"
       crossorigin="anonymous"
     ></script>
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3388685, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header class="header">
@@ -42,14 +60,15 @@
     </header>
     <main>
       <section class="top-section">
-        <div class="top-img"></div>
-        <p class="slogan-index">A new start with all the knowlege you need!</p>
-        <a href="tip.html" class="tip-button">Tip of the week</a>
+        <div class="top-img">
+          <p class="slogan-index">
+            A new start with all the knowlege you need!
+          </p>
+          <a href="tip.html" class="tip-button">Tip of the week</a>
+        </div>
       </section>
       <section>
-        <div>
-          <p class="latest-posts">Latest posts</p>
-        </div>
+        <p class="latest-posts">Latest posts</p>
         <section class="latest-posts-carousel"></section>
         <button class="prev">&#10094;</button>
         <button class="next">&#10095;</button>
@@ -57,7 +76,7 @@
     </main>
     <footer>
       <div>
-        <img class="subscribe-img" src="images/subscribe.jpg" alt="" />
+        <img class="subscribe-img" src="images/subscribe.png" alt="" />
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
