--- a/about.html
+++ b/about.html
@@ -147,9 +147,9 @@
         </div>
       </section>
     </main>
-    <footer class="footer-about">
+    <footer>
       <div>
-        <img class="subscribe-img" src="images/subscribe.jpg" alt="" />
+        <img class="subscribe-img" src="images/subscribe.png" alt="" />
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
