--- a/postdetalj.html
+++ b/postdetalj.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Design bla bla" />
+    <meta
+      name="description"
+      content="Read details about a post you want to know more about"
+    />
     <title>Design | Home</title>
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/postdetalj.css" rel="stylesheet" />
@@ -61,7 +64,7 @@
     </main>
     <footer>
       <div>
-        <img class="subscribe-img" src="images/subscribe.jpg" alt="" />
+        <img class="subscribe-img" src="images/subscribe.png" alt="" />
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
