--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Design bla bla" />
+    <meta name="description" content="Our most recent posts" />
     <title>Design | Home</title>
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/posts.css" rel="stylesheet" />
@@ -58,19 +58,19 @@
     </header>
     <main>
       <section class="top-section">
-        <div class="top-img"></div>
-        <p class="theme">Posts</p>
-        <p class="slogan">
-          “Some times all you need is a litle bit of inspiration”
-        </p>
+        <div class="top-img-posts">
+          <p class="theme">Posts</p>
+          <p class="slogan">
+            “Some times all you need is a litle bit of inspiration”
+          </p>
+        </div>
       </section>
       <section class="posts-list"></section>
       <button class="load">Load More</button>
     </main>
-
     <footer>
       <div>
-        <img class="subscribe-img" src="../images/subscribe.jpg" alt="" />
+        <img class="subscribe-img" src="images/subscribe.png" alt="" />
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
