--- a/about.html
+++ b/about.html
@@ -58,8 +58,9 @@
     </header>
     <main>
       <div>
-        <div class="top-img-about"></div>
-        <p class="about-text">“A design customized for you and your needs”</p>
+        <div class="top-img-about">
+          <p class="about-text">“A design customized for you and your needs”</p>
+        </div>
       </div>
       <p class="top-text-about">Our Work</p>
       <section class="our-work-flex">
@@ -148,8 +149,7 @@
       </section>
     </main>
     <footer>
-      <div>
-        <img class="subscribe-img" src="images/subscribe.png" alt="" />
+      <div class="subscribe-img">
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
