--- a/contact.html
+++ b/contact.html
@@ -53,15 +53,13 @@
     </header>
     <main>
       <div>
-        <div class="top-img"></div>
-        <p class="contact-text">Contact</p>
+        <div class="top-img-contact">        
+          <p class="contact-text">Contact</p></div>
       </div>
-      <div>
         <p class="contact-info">
           Contact us at yourdesign@fake.com or fill in the form below. We will
           contact you within 24 hours.
         </p>
-      </div>
       <section class="contact-and-picture">
         <form id="contactForm">
           <div>
