--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
       </section>
     </main>
     <footer>
-      <div>
-        <img class="subscribe-img" src="images/subscribe.png" alt="" />
+      <div class="subscribe-img">
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
