--- a/posts.html
+++ b/posts.html
@@ -69,8 +69,7 @@
       <button class="load">Load More</button>
     </main>
     <footer>
-      <div>
-        <img class="subscribe-img" src="images/subscribe.png" alt="" />
+      <div class="subscribe-img">
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
