--- a/tip.html
+++ b/tip.html
@@ -93,8 +93,7 @@
       </p>
     </main>
     <footer>
-      <div>
-        <img class="subscribe-img" src="images/subscribe.png" alt="" />
+      <div class="subscribe-img">
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
@@ -117,5 +116,6 @@
       </div>
       <p class="copyright">Copyright &copy; 2023</p>
     </footer>
+    <script src="js/global.js"></script>
   </body>
 </html>
