--- a/postdetalj.html
+++ b/postdetalj.html
@@ -63,8 +63,7 @@
       <section class="postContainer"></section>
     </main>
     <footer>
-      <div>
-        <img class="subscribe-img" src="images/subscribe.png" alt="" />
+      <div class="subscribe-img">
         <p class="subscribe">
           Subscribe to our newsletter and get a free consultation.
         </p>
