--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
           <img
             class="our-work-img"
             src="images/about-img.jpg"
-            alt="about image"
+            alt="architectural drawing"
           />
         </div>
       </section>
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="our-team-img">
-          <img src="images/sophia.jpg" alt="olivia" />
+          <img src="images/sophia.jpg" alt="sophia" />
           <div class="team-name">
             <p class="name-color">Sophia Lauren</p>
             <p>Advertising & Promotions manager</p>
@@ -123,28 +123,28 @@
       </section>
       <section class="about-images">
         <div>
-          <img src="images/about2.jpg" alt="olivia" />
+          <img src="images/about2.jpg" alt="light source on a bench" />
         </div>
         <div>
-          <img src="images/about3.jpg" alt="olivia" />
+          <img src="images/about3.jpg" alt="flowers in a vase" />
         </div>
         <div>
-          <img src="images/about4.jpg" alt="olivia" />
+          <img src="images/about4.jpg" alt="bed" />
         </div>
         <div>
-          <img src="images/about5.jpg" alt="olivia" />
+          <img src="images/about5.jpg" alt="chair" />
         </div>
         <div>
-          <img src="images/about6.jpg" alt="olivia" />
+          <img src="images/about6.jpg" alt="wooden chair at a wooden table" />
         </div>
         <div>
-          <img src="images/about7.jpg" alt="olivia" />
+          <img src="images/about7.jpg" alt="kitchen" />
         </div>
         <div>
-          <img src="images/about8.jpg" alt="olivia" />
+          <img src="images/about8.jpg" alt="sofa" />
         </div>
         <div>
-          <img src="images/about9.jpg" alt="olivia" />
+          <img src="images/about9.jpg" alt="living room with two chairs" />
         </div>
       </section>
     </main>
