--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Design bla bla" />
     <title>Design | Home</title>
-    <link href="css/global.css" rel="stylesheet" />
-    <link href="css/contact.css" rel="stylesheet" />
-    <link href="css/media.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="css/global.css" rel="stylesheet" >
+    <link href="css/contact.css" rel="stylesheet" >
+    <link href="css/media.css" rel="stylesheet" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Average&family=Baskervville:ital@0;1&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       href="https://fontawesome.com/icons/bars?s=solid&f=classic"
       rel="hamburger-menu"
-    />
+    >
     <script
       src="https://kit.fontawesome.com/681646004f.js"
       crossorigin="anonymous"
@@ -39,7 +39,7 @@
       <label class="hamburger" for="hamburger-menu"
         ><i class="fas fa-bars"></i
       ></label>
-      <input class="checkbox" type="checkbox" id="hamburger-menu" />
+      <input class="checkbox" type="checkbox" id="hamburger-menu" >
       <a href="index.html">
         <h1 class="heading">DESIGN FOR YOU</h1>
       </a>
