--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
       </nav>
     </header>
     <main>
-      <section class="top-section">
+      <div class="top-section">
         <div class="top-img">
           <p class="slogan-index">
             A new start with all the knowlege you need!
           </p>
           <a href="tip.html" class="tip-button">Tip of the week</a>
         </div>
-      </section>
+      </div>
       <section>
-        <p class="latest-posts">Latest posts</p>
-        <section class="latest-posts-carousel"></section>
+        <h2 class="latest-posts">Latest posts</h2>
+        <div class="latest-posts-carousel"></div>
         <button class="prev">&#10094;</button>
         <button class="next">&#10095;</button>
       </section>
@@ -84,9 +84,9 @@
           <div>
             <label class="label-subscribe">
               <input name="email" id="email" placeholder="Email" />
-              <p class="form-error" id="emailError">
+              <div class="form-error" id="emailError">
                 Please enter a valid email address
-              </p>
+              </div>
             </label>
           </div>
           <button class="button-subscribe">Subscribe</button>
