--- a/postdetalj.html
+++ b/postdetalj.html
@@ -71,9 +71,9 @@
           <div>
             <label class="label-subscribe">
               <input name="email" id="email" placeholder="Email" />
-              <p class="form-error" id="emailError">
+              <div class="form-error" id="emailError">
                 Please enter a valid email address
-              </p>
+              </div>
             </label>
           </div>
           <button class="button-subscribe">Subscribe</button>
