--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
           <div>
             <label class="label-subscribe">
               <input name="email" id="email" placeholder="Email" />
-              <div class="form-error" id="emailError">
+              <p class="form-error" id="emailError">
                 Please enter a valid email address
-              </div>
+              </p>
             </label>
           </div>
           <button class="button-subscribe">Subscribe</button>
