--- a/contact.html
+++ b/contact.html
@@ -5,41 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Design bla bla" />
     <title>Design | Home</title>
-    <link href="css/global.css" rel="stylesheet" >
-    <link href="css/contact.css" rel="stylesheet" >
-    <link href="css/media.css" rel="stylesheet" >
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link href="css/global.css" rel="stylesheet" />
+    <link href="css/contact.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Average&family=Baskervville:ital@0;1&display=swap"
       rel="stylesheet"
-    >
+    />
     <link
       href="https://fontawesome.com/icons/bars?s=solid&f=classic"
       rel="hamburger-menu"
-    >
+    />
     <script
       src="https://kit.fontawesome.com/681646004f.js"
       crossorigin="anonymous"
     ></script>
-<!-- Hotjar Tracking Code for design for you -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:3487663,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <!-- Hotjar Tracking Code for design for you -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3487663, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header class="header">
       <label class="hamburger" for="hamburger-menu"
         ><i class="fas fa-bars"></i
       ></label>
-      <input class="checkbox" type="checkbox" id="hamburger-menu" >
+      <input class="checkbox" type="checkbox" id="hamburger-menu" />
       <a href="index.html">
         <h1 class="heading">DESIGN FOR YOU</h1>
       </a>
@@ -53,14 +58,15 @@
     </header>
     <main>
       <div>
-        <div class="top-img-contact">        
-          <p class="contact-text">Contact</p></div>
+        <div class="top-img-contact">
+          <p class="contact-text">Contact</p>
+        </div>
       </div>
-        <p class="contact-info">
-          Contact us at yourdesign@fake.com or fill in the form below. We will
-          contact you within 24 hours.
-        </p>
-      <section class="contact-and-picture">
+      <p class="contact-info">
+        Contact us at yourdesign@fake.com or fill in the form below. We will
+        contact you within 24 hours.
+      </p>
+      <div class="contact-and-picture">
         <form id="contactForm">
           <div>
             <label>
@@ -122,17 +128,16 @@
           </div>
           <button class="button-submit">Submit</button>
         </form>
-        <section class="contact-img-hand">
+        <div class="contact-img-hand">
           <img
             class="img-hand"
             src="images/contact-form.jpg"
             alt="contact image"
           />
-        </section>
-      </section>
+        </div>
+      </div>
     </main>
     <footer class="footer-contact">
-      </div>
       <div class="links">
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
