--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         </div>
       </div>
       <p class="top-text-about">Our Work</p>
-      <section class="our-work-flex">
+      <div class="our-work-flex">
         <div class="our-work-text">
           <p>
             Designers play a crucial role in shaping the world around us. From
@@ -96,9 +96,9 @@
             alt="architectural drawing"
           />
         </div>
-      </section>
+      </div>
       <p class="top-text-team">The Team</p>
-      <section class="team-flex">
+      <div class="team-flex">
         <div class="our-team-img">
           <img src="images/olivia.jpg" alt="olivia" />
           <div class="team-name">
@@ -120,8 +120,8 @@
             <p>Advertising & Promotions manager</p>
           </div>
         </div>
-      </section>
-      <section class="about-images">
+      </div>
+      <div class="about-images">
         <div>
           <img src="images/about2.jpg" alt="light source on a bench" />
         </div>
@@ -146,7 +146,7 @@
         <div>
           <img src="images/about9.jpg" alt="living room with two chairs" />
         </div>
-      </section>
+      </div>
     </main>
     <footer>
       <div class="subscribe-img">
@@ -157,9 +157,9 @@
           <div>
             <label class="label-subscribe">
               <input name="email" id="email" placeholder="Email" />
-              <div class="form-error" id="emailError">
+              <p class="form-error" id="emailError">
                 Please enter a valid email address
-              </div>
+              </p>
             </label>
           </div>
           <button class="button-subscribe">Subscribe</button>
