--- a/posts.html
+++ b/posts.html
@@ -57,15 +57,15 @@
       </nav>
     </header>
     <main>
-      <section class="top-section">
+      <div class="top-section">
         <div class="top-img-posts">
           <p class="theme">Posts</p>
           <p class="slogan">
             “Some times all you need is a litle bit of inspiration”
           </p>
         </div>
-      </section>
-      <section class="posts-list"></section>
+      </div>
+      <div class="posts-list"></div>
       <button class="load">Load More</button>
     </main>
     <footer>
@@ -77,9 +77,9 @@
           <div>
             <label class="label-subscribe">
               <input name="email" id="email" placeholder="Email" />
-              <div class="form-error" id="emailError">
+              <p class="form-error" id="emailError">
                 Please enter a valid email address
-              </div>
+              </p>
             </label>
           </div>
           <button class="button-subscribe">Subscribe</button>
