--- a/postdetalj.html
+++ b/postdetalj.html
@@ -60,7 +60,7 @@
       </nav>
     </header>
     <main>
-      <section class="postContainer"></section>
+      <div class="postContainer"></div>
     </main>
     <footer>
       <div class="subscribe-img">
@@ -71,9 +71,9 @@
           <div>
             <label class="label-subscribe">
               <input name="email" id="email" placeholder="Email" />
-              <div class="form-error" id="emailError">
+              <p class="form-error" id="emailError">
                 Please enter a valid email address
-              </div>
+              </p>
             </label>
           </div>
           <button class="button-subscribe">Subscribe</button>
