--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <label class="hamburger" for="hamburger-menu"
         ><i class="fas fa-bars"></i
       ></label>
-      <input class="checkbox" type="checkbox" id="hamburger-menu" />
+      <input class="checkbox" type="checkbox" id="hamburger-menu" alt="menu" />
       <a href="index.html">
         <h1 class="heading">DESIGN FOR YOU</h1>
       </a>
