--- a/about.html
+++ b/about.html
@@ -59,10 +59,12 @@
     <main>
       <div>
         <div class="top-img-about">
-          <p class="about-text">“A design customized for you and your needs”</p>
+          <h2 class="about-text">
+            “A design customized for you and your needs”
+          </h2>
         </div>
       </div>
-      <p class="top-text-about">Our Work</p>
+      <h3 class="top-text-about">Our Work</h3>
       <div class="our-work-flex">
         <div class="our-work-text">
           <p>
@@ -97,7 +99,7 @@
           />
         </div>
       </div>
-      <p class="top-text-team">The Team</p>
+      <h3 class="top-text-team">The Team</h3>
       <div class="team-flex">
         <div class="our-team-img">
           <img src="images/olivia.jpg" alt="olivia" />
