--- a/contact.html
+++ b/contact.html
@@ -129,11 +129,7 @@
           <button class="button-submit">Submit</button>
         </form>
         <div class="contact-img-hand">
-          <img
-            class="img-hand"
-            src="images/contact-form.jpg"
-            alt="contact image"
-          />
+          <img class="img-hand" src="images/contact-form.jpg" alt="a hand" />
         </div>
       </div>
     </main>
