--- a/posts.html
+++ b/posts.html
@@ -59,7 +59,7 @@
     <main>
       <div class="top-section">
         <div class="top-img-posts">
-          <p class="theme">Posts</p>
+          <h2 class="theme">Posts</h2>
           <p class="slogan">
             “Some times all you need is a litle bit of inspiration”
           </p>
