--- a/postdetalj.html
+++ b/postdetalj.html
@@ -7,7 +7,7 @@
       name="description"
       content="Read details about a post you want to know more about"
     />
-    <title>Design | Home</title>
+    <title>Design | Post</title>
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/postdetalj.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
