--- a/tip.html
+++ b/tip.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tip of the week" />
-    <title>Design | Home</title>
+    <title>Design | Tip of the week</title>
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/postdetalj.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
