--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Design bla bla" />
-    <title>Design | Home</title>
+    <title>Design | About us</title>
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/about.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
