--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Design bla bla" />
-    <title>Design | Home</title>
+    <title>Design | Contact</title>
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/contact.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
