--- a/posts.html
+++ b/posts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Our most recent posts" />
-    <title>Design | Home</title>
+    <title>Design | Posts</title>
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/posts.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
